Add function symbol
1. test directory added
2. Fixed a bug in arith4, arith5: extraneous token after expr.

--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +274,8 @@
     "  tokens = tokenizer(input_text)\n",
     "  parser = Parser(tokens)\n",
     "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
+    "  if parser.current_token is not None:\n",
+    "    raise SyntaxError(f\"Unexpected token {parser.current_token} at {parser.index}, in parse_input(). Expected end of input.\")\n",
     "  return ast\n",
     "\n",
     "def testParser(input_text):\n",
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,18 +304,21 @@
       "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
       "SyntaxError: Expected numeral or identifier, in atom(): + (op_type1)\n",
       "SyntaxError: Unexpected end of input, in atom()\n",
-      "SyntaxError: Expected numeral or identifier, in atom(): - (op_type1)\n"
+      "SyntaxError: Expected numeral or identifier, in atom(): - (op_type1)\n",
+      "SyntaxError: Unexpected token b (identifier) at 1, in parse_input(). Expected end of input.\n"
      ]
     }
    ],
    "source": [
     "testParser(\"a + b * (c - d) + ab\")\n",
     "testParser(\"(a/b + 102)*(const - 2*var)\")\n",
+    "# Some invalid inputs.\n",
     "testParser(\"c - a + UpperCaseVar\")\n",
     "testParser(\"c1 - a + UpperCaseVar\")\n",
     "testParser(\"a + + b\")\n",
     "testParser(\"a + b *\")\n",
-    "testParser(\"-a + b *\")"
+    "testParser(\"-a + b *\")\n",
+    "testParser(\"a b\")"
    ]
   }
  ],
@@ -333,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
