--- a/arith5parser.ipynb
+++ b/arith5parser.ipynb
@@ -11,14 +11,13 @@
     "* unary prefix -\n",
     "* unary postfix !\n",
     "* exponentiation a^b\n",
-    "* function sin(x), cos(x), and choose(x,y)\n",
     "\n",
     "-a^b is -(a^b), not (-a)^b  \n",
     "a^b! = a^(b!), not (a^b)!  \n",
     "-a! is -(a!), not (-a)!  \n",
     "a^b^c is a^(b^c), not (a^b)^c (right associative)\n",
     "\n",
-    "```\n",
+    "```perl\n",
     "<expr> ::= (<term> | <nterm>) { (\"+\" | \"-\") <term> }\n",
     "<nterm> ::= \"-\" { \"-\" } <term>\n",
     "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +353,8 @@
     "  tokens = tokenizer(input_text)\n",
     "  parser = Parser(tokens)\n",
     "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
+    "  if parser.current_token is not None:\n",
+    "    raise SyntaxError(f\"Unexpected token {parser.current_token} at {parser.index}, in parse_input(). Expected end of input.\")\n",
     "  return ast\n",
     "\n",
     "def testParser(input_text, showOperType=False):\n",
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -396,10 +397,11 @@
       "+ - * a b2 c\n",
       "+ - * a - - b2 c\n",
       "SyntaxError: Expected numeral or identifier at 2, in atom(): - (op_bin_1)\n",
-      "-(op_bin_1) a(identifier) -(op_unary_prefix) b(identifier)\n",
       "+ + first * second + hello - c1 a23\n",
+      "-(op_bin_1) a(identifier) -(op_unary_prefix) b(identifier)\n",
       "SyntaxError: Expected numeral or identifier at 2, in atom(): + (op_bin_1)\n",
-      "SyntaxError: Unexpected end of input, in atom()\n"
+      "SyntaxError: Unexpected end of input, in atom()\n",
+      "SyntaxError: Unexpected token b (identifier) at 1, in parse_input(). Expected end of input.\n"
      ]
     }
    ],
@@ -407,10 +409,12 @@
     "testParser(\"-a*b2 + c\")\n",
     "testParser(\"-a*(--b2) + c\")\n",
     "testParser(\"a + -b\")\n",
-    "testParser(\"a - (-b)\", showOperType=True)\n",
     "testParser(\"first + second* (hello + (-c1))+a23\")\n",
+    "testParser(\"a - (-b)\", showOperType=True)\n",
+    "# Some invalid expressions.\n",
     "testParser(\"a + + b\")\n",
-    "testParser(\"a + b *\")"
+    "testParser(\"a + b *\")\n",
+    "testParser(\"a b\")"
    ]
   },
   {
@@ -432,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +450,7 @@
     }
    ],
    "source": [
-    "testParser(\"a^b^c\")\n",
+    "testParser(\"a^b^c\") # right associativity\n",
     "testParser(\"(a)^(---b'!)^c\")\n",
     "testParser(\"(-a^b!)^c\")"
    ]
@@ -468,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
