--- a/arith6parser.ipynb
+++ b/arith6parser.ipynb
@@ -11,37 +11,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# <expr> ::= (<term> | <nterm>) { (\"+\" | \"-\") <term> }\n",
-    "# <nterm> ::= \"-\" { \"-\" } <term>\n",
-    "# <term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
-    "# <factor> ::= { <factor_exp> \"^\" } <factor_exp>\n",
-    "# <factor_exp> ::= <factor_post> { (\"!\" | \"'\") }\n",
-    "# <factor_post> ::= \"(\" <expr> \")\" | <atom>\n",
-    "# <atom> ::= <identifier> | <numeral> | <func_call>\n",
-    "# <func_call> ::= <identifier> '(' <expr> {',' <expr>} ')' # 0-ary functions are not allowed\n",
-    "# <identifier> ::= <letter> { <letter> | <digit> }\n",
-    "# <letter> ::= [a-zA-Z_] \n",
-    "# <numeral> ::= <positive_digit> { <digit> }\n",
-    "# <digit> ::= [0-9]\n",
-    "# <positive_digit> :: = [1-9] "
+    "```perl\n",
+    "<expr> ::= (<term> | <nterm>) { (\"+\" | \"-\") <term> }\n",
+    "<nterm> ::= \"-\" { \"-\" } <term>\n",
+    "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
+    "<factor> ::= { <factor_exp> \"^\" } <factor_exp>\n",
+    "<factor_exp> ::= <factor_post> { (\"!\" | \"'\") }\n",
+    "<factor_post> ::= \"(\" <expr> \")\"  | <func_call> | <atom>\n",
+    "<func_call> ::= <func_symb> '(' <expr> {',' <expr>} ')' \n",
+    "  # 0-ary functions are not allowed\n",
+    "<atom> ::= <identifier> | <numeral>\n",
+    "<identifier> ::= <letter> { <letter> | <digit> }\n",
+    "<letter> ::= [a-zA-Z] \n",
+    "<numeral> ::= <nonzero_digit> { <digit> }\n",
+    "<digit> ::= [0-9]\n",
+    "<nonzero_digit> :: = [1-9] \n",
+    "<func_symb> ::= \"sin\" | \"cos\" | \"max\" | \"min\" | \"f\"\n",
+    "  # arities are given in Token constructor\n",
+    "  # sin, cos are unary, max, min are binary, f are ternary\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Token:\n",
     "  def __init__(self, value):\n",
     "    self.value = value\n",
+    "    self.arity = None\n",
     "    # input value is guaranteed to be a valid token\n",
-    "    if value in (\"+\", \"-\"):\n",
+    "    if value == \",\":\n",
+    "      self.token_type = 'comma'\n",
+    "    elif value in (\"+\", \"-\"):\n",
     "      self.token_type = 'op_bin_1' # precedence 1\n",
     "    elif value in (\"*\", \"/\"):\n",
     "      self.token_type = 'op_bin_2' # precedence 2\n",
@@ -55,49 +63,60 @@
     "      self.token_type = \"op_bin_exp\"\n",
     "    elif value.isdecimal():\n",
     "      self.token_type = 'numeral'\n",
+    "    elif(value in (\"sin\", \"cos\", \"max\", \"min\", \"f\")):\n",
+    "        self.token_type = 'func_symb'\n",
+    "        if(value in (\"sin\", \"cos\")):\n",
+    "          self.arity = 1\n",
+    "        elif(value in (\"max\", \"min\")):\n",
+    "          self.arity = 2\n",
+    "        else:\n",
+    "          self.arity = 3\n",
     "    elif value.isalnum() and value[0].isalpha():\n",
     "      self.token_type = 'identifier'\n",
     "    else:\n",
     "      raise ValueError(f\"'{value}' is invalid (Token)\")\n",
     "  \n",
     "  def __str__(self):\n",
-    "    return f'{self.value} ({self.token_type})'"
+    "    ret_str = f'{self.value} ({self.token_type})'\n",
+    "    if self.arity is not None:\n",
+    "      ret_str += f' arity: {self.arity}'\n",
+    "    return ret_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ (op_bin_1)\n",
-      "* (op_bin_2)\n",
-      "( (lparen)\n",
-      ") (rparen)\n",
+      ", (comma)\n",
+      "+ (op_bin_1), * (op_bin_2)\n",
+      "( (lparen), ) (rparen)\n",
       "13 (numeral)\n",
-      "abc (identifier) a1 (identifier)\n",
-      "! (op_postfix) ' (op_postfix)\n",
-      "^ (op_bin_exp)\n"
+      "abc (identifier), a1 (identifier)\n",
+      "! (op_postfix), ' (op_postfix)\n",
+      "^ (op_bin_exp)\n",
+      "sin (func_symb) arity: 1, max (func_symb) arity: 2, f (func_symb) arity: 3\n"
      ]
     }
    ],
    "source": [
-    "print(Token(\"+\"))\n",
-    "print(Token(\"*\"))\n",
-    "print(Token(\"(\"))\n",
-    "print(Token(\")\"))\n",
+    "print(Token(\",\"))\n",
+    "print(Token(\"+\"), Token(\"*\"), sep=\", \")\n",
+    "print(Token(\"(\"), Token(\")\"), sep=\", \")\n",
     "print(Token(\"13\"))\n",
-    "print(Token(\"abc\"), Token(\"a1\"))\n",
-    "print(Token(\"!\"), Token(\"'\"))\n",
-    "print(Token(\"^\"))"
+    "print(Token(\"abc\"), Token(\"a1\"), sep=\", \")\n",
+    "print(Token(\"!\"), Token(\"'\"), sep=\", \")\n",
+    "print(Token(\"^\"))\n",
+    "print(Token(\"sin\"), Token(\"max\"), Token(\"f\"), sep=\", \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,12 +131,12 @@
     "  for s in li: # s is a string\n",
     "    if not s.isascii():\n",
     "      raise ValueError(f\"'{s}' is invalid (non-ASCII)\")\n",
-    "    if not (set(s).issubset(\"+-*/()!'^\") or      # operator or parenthesis\n",
+    "    if not (set(s).issubset(\"+-*/()!'^,\") or  # operator or parenthesis or comma\n",
     "            (s.isdecimal() and s[0]!='0') or  # numeral\n",
-    "            (s.isalnum() and s[0].isalpha() and s.islower())):   \n",
-    "                                              # identifier\n",
+    "            (s.isalnum() and s[0].isalpha())):   \n",
+    "                                              # identifier or function symbol\n",
     "      raise ValueError(f\"'{s}' is invalid (non-token)\")\n",
-    "    if set(s).issubset(\"+-*/()!'^\") and len(s) > 1:\n",
+    "    if set(s).issubset(\"+-*/()!'^,\") and len(s) > 1:\n",
     "      # split string of consecutive operators into individual characters\n",
     "      for c in s: # c is an operator character\n",
     "        tokens.append(Token(c))\n",
@@ -129,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,24 +164,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "max (func_symb) arity: 2\n",
+      "( (lparen)\n",
       "a (identifier)\n",
       "/ (op_bin_2)\n",
       "b (identifier)\n",
+      "! (op_postfix)\n",
+      "+ (op_bin_1)\n",
+      "2 (numeral)\n",
+      ", (comma)\n",
+      "10 (numeral)\n",
+      ") (rparen)\n",
       "+ (op_bin_1)\n",
       "b1 (identifier)\n",
       "^ (op_bin_exp)\n",
       "b (identifier)\n",
       "' (op_postfix)\n",
       "* (op_bin_2)\n",
+      "( (lparen)\n",
+      "- (op_bin_1)\n",
       "c1 (identifier)\n",
       "! (op_postfix)\n",
+      ") (rparen)\n",
       "* (op_bin_2)\n",
       "( (lparen)\n",
       "hello (identifier)\n",
@@ -175,31 +205,32 @@
     }
    ],
    "source": [
-    "testTokenizer(\"a/b + b1^b'*c1!* (hello - cc1)+a23\")"
+    "testTokenizer(\"max(a/b!+ 2, 10) + b1^b'*(-c1!)* (hello - cc1)+a23\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tokenizer: 'Hello' is invalid (non-token)\n",
+      "Tokenizer: '1hello' is invalid (non-token)\n",
       "Tokenizer: '023' is invalid (non-token)\n"
      ]
     }
    ],
    "source": [
-    "testTokenizer(\"first + second* +Hello + 23+2\")\n",
+    "# some invalid inputs\n",
+    "testTokenizer(\"First + Second2* +1hello + 23+2\")\n",
     "testTokenizer(\"first + second*-hello + 023+2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,6 +250,26 @@
     "    ret_str += ' '.join(child.build_polish_notation(opt) \n",
     "                        for child in self.children)\n",
     "    return ret_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 in [1]"
    ]
   },
   {
@@ -244,27 +295,36 @@
     "\n",
     "  def check_token_type(self, token_types):\n",
     "    # token_types can be a string or a tuple of strings\n",
+    "    # Check if self.current_token is of type token_types if token_types is a string\n",
+    "    # or belongs to token_types if token_types is a tuple of strings.\n",
     "    token = self.current_token\n",
     "    if token is None:\n",
     "      return False\n",
-    "    elif(type(token_types) is not tuple): # must be a string in this case\n",
+    "    elif type(token_types) is not tuple: # must be a string in this case\n",
     "        return token.token_type == token_types\n",
-    "    elif len(token_types) == 1:\n",
-    "      return token.token_type == token_types[0]\n",
     "    elif token.token_type in token_types:\n",
     "      return True\n",
     "    else:\n",
     "      return False\n",
-    "\n",
+    "    \n",
+    "  def check_token_value(self, token_value):\n",
+    "    # Check if self.current_token is of value token_value.\n",
+    "    token = self.current_token\n",
+    "    if token is None:\n",
+    "      return False\n",
+    "    elif token.value == token_value:\n",
+    "      return True\n",
+    "    else:\n",
+    "      return False\n",
+    "    \n",
     "  def parse(self):\n",
     "    return self.expr() # expr() corresponds to the starting symbol <expr>\n",
     "\n",
     "  def expr(self):\n",
-    "    if(self.current_token is not None and  \n",
-    "      self.current_token.value == '-'): # unary minus\n",
-    "      node = self.nterm()\n",
-    "    else: # not a negative term\n",
-    "      node = self.term()\n",
+    "    if self.check_token_value('-'): # unary minus\n",
+    "      node = self.nterm() # negative term\n",
+    "    else: # ordinary term\n",
+    "      node = self.term()  \n",
     "\n",
     "    while self.check_token_type('op_bin_1'): # '+' or '-'\n",
     "      # If we are at '+' in \"a + b * c - ...\" then the next token is '-'\n",
@@ -273,7 +333,7 @@
     "      self.advance()\n",
     "      right_term = self.term()\n",
     "      node = Node(token, [node, right_term]) # left associative\n",
-    "\n",
+    "    \n",
     "    return node\n",
     "  \n",
     "  def nterm(self):\n",
@@ -330,12 +390,46 @@
     "      if self.check_token_type('rparen'):\n",
     "        self.advance()\n",
     "      else:\n",
-    "        raise SyntaxError(\"Expected ')' after expression at {self.index}, in factor_postfix()\")\n",
+    "        raise SyntaxError(\"Expected ')' after expression at {self.index} in factor_postfix(), but {self.current_token} is given.\")\n",
+    "    elif self.check_token_type('func_symb'):\n",
+    "      node = self.func_call()\n",
     "    else:\n",
     "      node = self.atom()\n",
     "\n",
     "    return node\n",
     "\n",
+    "  def func_call(self):\n",
+    "    if self.current_token is not None:\n",
+    "      token = self.current_token\n",
+    "      if self.check_token_type('func_symb'):\n",
+    "        self.advance()\n",
+    "        if self.check_token_type('lparen'):\n",
+    "          self.advance()\n",
+    "          args = []\n",
+    "\n",
+    "          while True:\n",
+    "            args.append(self.expr())\n",
+    "            if self.check_token_type('comma'):\n",
+    "              self.advance()\n",
+    "            elif self.check_token_type('rparen'):\n",
+    "              break\n",
+    "            else:\n",
+    "              raise SyntaxError(f\"Expected ',' or ')' after function argument at {self.index} in func_call(), but {self.current_token} is given.\")\n",
+    "          \n",
+    "          # arity check\n",
+    "          if token.arity is None or token.arity != len(args):\n",
+    "            raise SyntaxError(f\"Function {token.value} expects {token.arity} arguments, but {len(args)} were given\")\n",
+    "\n",
+    "          self.advance()\n",
+    "          return Node(token, args)\n",
+    "        \n",
+    "        else:\n",
+    "          raise SyntaxError(f\"Expected '(' after function symbol at {self.index} in func_call(), but {self.current_token} is given.\")\n",
+    "      else:\n",
+    "        raise SyntaxError(f\"Expected function symbol at {self.index} in func_call(), but {token} is given.\")\n",
+    "    else:\n",
+    "      raise SyntaxError(\"Unexpected end of input, in func_call()\")\n",
+    "      \n",
     "  def atom(self):\n",
     "    if self.current_token is not None:\n",
     "      token = self.current_token\n",
@@ -343,7 +437,7 @@
     "        self.advance()\n",
     "        return Node(token)\n",
     "      else:\n",
-    "        raise SyntaxError(f\"Expected numeral or identifier at {self.index}, in atom(): {token}\")\n",
+    "        raise SyntaxError(f\"Expected numeral or identifier at {self.index}, in atom(), but {token} is given.\")\n",
     "    else:\n",
     "      raise SyntaxError(\"Unexpected end of input, in atom()\")\n",
     "      \n",
@@ -351,6 +445,8 @@
     "  tokens = tokenizer(input_text)\n",
     "  parser = Parser(tokens)\n",
     "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
+    "  if parser.current_token is not None:\n",
+    "    raise SyntaxError(f\"Unexpected token {parser.current_token} at {parser.index}, in parse_input(). Expected end of input.\")\n",
     "  return ast\n",
     "\n",
     "def testParser(input_text, showOperType=False):\n",
@@ -373,12 +469,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- - - a - * b c\n"
+      "+ a f sin a max b + - / a ! ' b 3 12\n"
      ]
     }
    ],
    "source": [
-    "testParser(\"--a - (-b * c)\")"
+    "testParser(\"a + f(sin(a),max(b, -a/b'! + 3), 12)\")"
    ]
   },
   {
@@ -390,106 +486,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ - * a b2 c\n",
-      "+ - * a - - b2 c\n",
-      "SyntaxError: Expected numeral or identifier at 2, in atom(): - (op_bin_1)\n",
-      "-(op_bin_1) a(identifier) -(op_unary_prefix) b(identifier)\n",
-      "+ + first * second + hello - c1 a23\n",
-      "SyntaxError: Expected numeral or identifier at 2, in atom(): + (op_bin_1)\n",
-      "SyntaxError: Unexpected end of input, in atom()\n"
+      "SyntaxError: Function f expects 3 arguments, but 2 were given\n",
+      "SyntaxError: Expected numeral or identifier at 8, in atom(), but ) (rparen) is given.\n"
      ]
     }
    ],
    "source": [
-    "testParser(\"-a*b2 + c\")\n",
-    "testParser(\"-a*(--b2) + c\")\n",
-    "testParser(\"a + -b\")\n",
-    "testParser(\"a - (-b)\", showOperType=True)\n",
-    "testParser(\"first + second* (hello + (-c1))+a23\")\n",
-    "testParser(\"a + + b\")\n",
-    "testParser(\"a + b *\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* * + - ! a b b ' ! ! c\n"
-     ]
-    }
-   ],
-   "source": [
-    "testParser(\"(-a!+b)*b*c!!'\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^ a ^ b c\n",
-      "^ a ^ - - - ! ' b c\n",
-      "^ - ^ a ! b c\n"
-     ]
-    }
-   ],
-   "source": [
-    "testParser(\"a^b^c\")\n",
-    "testParser(\"(a)^(---b'!)^c\")\n",
-    "testParser(\"(-a^b!)^c\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- + a * b c d\n",
-      "- + a * b c ^ d e\n",
-      "- + a * b c ^ d ^ e f\n",
-      "- + a * b c ^ d ^ e ^ f g\n"
-     ]
-    }
-   ],
-   "source": [
-    "# test some more input strings\n",
-    "testParser(\"a + b * c - d\")\n",
-    "testParser(\"a + b * c - d^e\")\n",
-    "testParser(\"a + b * c - d^e^f\")\n",
-    "testParser(\"a + b * c - d^e^f^g\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SyntaxError: Unexpected end of input, in atom()\n",
-      "- + a * b c ^ d ^ e ^ f ^ g h\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Now let's try to parse some invalid input strings\n",
-    "testParser(\"a + b * c - d^e^f^g^\")\n",
-    "testParser(\"a + b * c - d^e^f^g^h\")"
+    "# Some illegal expressions\n",
+    "testParser(\"a + f(a, b)\")\n",
+    "testParser(\"a + f(a, b, )\")"
    ]
   }
  ],
@@ -509,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
