RPN and infix-LaTeX output

--- a/latex_in_jupyternotebook.ipynb
+++ b/latex_in_jupyternotebook.ipynb
@@ -20,25 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display, Code"
+    "from IPython.display import display, Math, Latex, Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.core.display import Math, Latex\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
