Bussproof style tree
End of arithmetic parser.
Start working on logical formulas.

--- a/arith6parser.ipynb
+++ b/arith6parser.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "Arith6 is an extension of Arith5.  \n",
     "\n",
-    "We add function symbols."
+    "Now, we can\n",
+    "1. handle function symbols,\n",
+    "1. output RPN and infix-LaTeX format."
    ]
   },
   {
@@ -31,14 +33,13 @@
     "<digit> ::= [0-9]\n",
     "<nonzero_digit> :: = [1-9] \n",
     "<func_symb> ::= \"sin\" | \"cos\" | \"max\" | \"min\" | \"f\"\n",
-    "  # arities are given in Token constructor\n",
-    "  # sin, cos are unary, max, min are binary, f are ternary\n",
+    "  # Function symbols with their arities can be set in Token class constructor.\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +574,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- * a b\n",
+      "- ^ a b\n",
+      "- ! a\n"
+     ]
+    }
+   ],
+   "source": [
+    "testParser(\"-a*b\")\n",
+    "testParser(\"-a^b\")\n",
+    "testParser(\"-a!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
