--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -8,7 +8,7 @@
     "Arith4 is a simple grammar for arithmetic.\n",
     "We'll build a parser for this grammar.\n",
     "\n",
-    "```\n",
+    "```xml\n",
     "<expr> ::= <term> { (\"+\" | \"-\") <term> }\n",
     "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
     "<factor> ::= \"(\" <expr> \")\" | <atom>\n",
@@ -338,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
