--- a/arith5parser.ipynb
+++ b/arith5parser.ipynb
@@ -12,12 +12,14 @@
     "* unary postfix !\n",
     "* exponentiation a^b\n",
     "\n",
+    "```python\n",
     "-a^b is -(a^b), not (-a)^b  \n",
     "a^b! = a^(b!), not (a^b)!  \n",
     "-a! is -(a!), not (-a)!  \n",
     "a^b^c is a^(b^c), not (a^b)^c (right associative)\n",
+    "```\n",
     "\n",
-    "```perl\n",
+    "```xml\n",
     "<expr> ::= (<term> | <nterm>) { (\"+\" | \"-\") <term> }\n",
     "<nterm> ::= \"-\" { \"-\" } <term>\n",
     "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
@@ -472,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
