--- a/arith6parser.ipynb
+++ b/arith6parser.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```perl\n",
+    "```xml\n",
     "<expr> ::= (<term> | <nterm>) { (\"+\" | \"-\") <term> }\n",
     "<nterm> ::= \"-\" { \"-\" } <term>\n",
     "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
