--- a/logic_parser.ipynb
+++ b/logic_parser.ipynb
@@ -27,6 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Author: Joohee Jeong\n",
+    "# Version: 2021.05.24\n",
+    "# Description: Use this in Google Colab if logic_parse.py is not uploaded.\n",
+    "\n",
+    "# import httpimport\n",
+    "# with httpimport.remote_repo('https://jhjeong.mindconnect.cc/etc'):\n",
+    "#   from logic_parse import *\n",
+    "  \n",
     "from logic_parse import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', showOperType=False):\n",
