Bussproof style tree
1. Use mathplotlib to directly draw on Jupyter Notebook (and Colab too)
2. LaTeX code for bussproofs.sty

--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -143,18 +143,18 @@
       "+ (op_type1)\n",
       "c1 (identifier)\n",
       ") (rparen)\n",
-      "+ (op_type1)\n",
+      "* (op_type2)\n",
       "a23 (identifier)\n"
      ]
     }
    ],
    "source": [
-    "testTokenizer(\"first + second* (hello + c1)+a23\")"
+    "testTokenizer(\"first + second* (hello + c1)*a23\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +268,22 @@
     "      else:\n",
     "        raise SyntaxError(f\"Expected numeral or identifier, in atom(): {token}\")\n",
     "    else:\n",
-    "      raise SyntaxError(\"Unexpected end of input, in atom()\")\n",
-    "      \n",
+    "      raise SyntaxError(\"Unexpected end of input, in atom()\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def parse_input(input_text):\n",
     "  tokens = tokenizer(input_text)\n",
     "  parser = Parser(tokens)\n",
     "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
     "  if parser.current_token is not None:\n",
-    "    raise SyntaxError(f\"Unexpected token {parser.current_token} at {parser.index}, in parse_input(). Expected end of input.\")\n",
+    "    raise SyntaxError(f\"Unexpected token {parser.current_token} at \" +\n",
+    "      f\"{parser.index}, in parse_input(). Expected end of input.\")\n",
     "  return ast\n",
     "\n",
     "def testParser(input_text):\n",
@@ -291,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
