--- a/arith6parser.ipynb
+++ b/arith6parser.ipynb
@@ -151,7 +151,7 @@
     "    if not (set(s).issubset(\"+-*/()!'^,\") or  # operator or parenthesis or comma\n",
     "            (s.isdecimal() and s[0]!='0') or  # numeral\n",
     "            (s.isalnum() and s[0].isalpha())):   \n",
-    "                                              # identifier or function symbol\n",
+    "              # identifier or function symbol\n",
     "      raise ValueError(f\"'{s}' is invalid (non-token)\")\n",
     "    if set(s).issubset(\"+-*/()!'^,\") and len(s) > 1:\n",
     "      # split string of consecutive operators into individual characters\n",
@@ -345,7 +345,7 @@
     "          if kid2.token.precedence < self.token.precedence:\n",
     "            pass # In a^(b+c), we don't need parentheses around b+c when it's latexed.\n",
     "          ret_str += kid1_str + ' ' + self.token.value + ' ' + '{' + kid2_str + '}'\n",
-    "        else: # precedenc==4. must be of type op_postfix\n",
+    "        else: # precedence==4. must be of type op_postfix\n",
     "          kid1 = self.children[0]\n",
     "          kid1_str = kid1.build_infix_latex()\n",
     "          if kid1.token.precedence < self.token.precedence:\n",
@@ -488,7 +488,7 @@
     "        self.advance()\n",
     "        if self.check_token_type('lparen'):\n",
     "          self.advance()\n",
-    "          args = []\n",
+    "          args = [] # list of arguments of the function\n",
     "\n",
     "          while True:\n",
     "            args.append(self.expr())\n",
@@ -1547,7 +1547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
