--- a/arith5parser.ipynb
+++ b/arith5parser.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,8 +271,6 @@
     "      node = self.term()\n",
     "\n",
     "    while self.check_token_type('op_bin_1'): # '+' or '-'\n",
-    "      # If we are at '+' in \"a + b * c - ...\" then the next token is '-'\n",
-    "      # because we will consume tokens by self.advance() and self.term().\n",
     "      token = self.current_token\n",
     "      self.advance()\n",
     "      right_term = self.term()\n",
@@ -296,7 +294,7 @@
     "    return node\n",
     "  \n",
     "  def term(self):\n",
-    "    node = self.factor()\n",
+    "    node = self.factor()    \n",
     "\n",
     "    while self.check_token_type('op_bin_2'): # '*' or '/'\n",
     "      token = self.current_token\n",
@@ -372,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -398,9 +396,9 @@
      "text": [
       "+ - * a b2 c\n",
       "+ - * a - - b2 c\n",
-      "SyntaxError: Expected numeral or identifier at 2, in atom(): - (op_bin_1)\n",
       "+ + first * second + hello - c1 a23\n",
       "-(op_bin_1) a(identifier) -(op_unary_prefix) b(identifier)\n",
+      "SyntaxError: Expected numeral or identifier at 2, in atom(): - (op_bin_1)\n",
       "SyntaxError: Expected numeral or identifier at 2, in atom(): + (op_bin_1)\n",
       "SyntaxError: Unexpected end of input, in atom()\n",
       "SyntaxError: Unexpected token b (identifier) at 1, in parse_input(). Expected end of input.\n"
@@ -410,10 +408,10 @@
    "source": [
     "testParser(\"-a*b2 + c\")\n",
     "testParser(\"-a*(--b2) + c\")\n",
-    "testParser(\"a + -b\")\n",
     "testParser(\"first + second* (hello + (-c1))+a23\")\n",
     "testParser(\"a - (-b)\", showOperType=True)\n",
     "# Some invalid expressions.\n",
+    "testParser(\"a + -b\")\n",
     "testParser(\"a + + b\")\n",
     "testParser(\"a + b *\")\n",
     "testParser(\"a b\")"
@@ -421,30 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* * + - ! a b b ' ! ! c\n"
-     ]
-    }
-   ],
-   "source": [
-    "testParser(\"(-a!+b)*b*c!!'\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "* * + - ! a b b ' ! ! c\n",
       "^ a ^ b c\n",
       "^ a ^ - - - ! ' b c\n",
       "^ - ^ a ! b c\n"
@@ -452,7 +434,8 @@
     }
    ],
    "source": [
-    "testParser(\"a^b^c\") # right associativity\n",
+    "testParser(\"(-a!+b)*b*c!!'\")\n",
+    "testParser(\"a^b^c\") \n",
     "testParser(\"(a)^(---b'!)^c\")\n",
     "testParser(\"(-a^b!)^c\")"
    ]
@@ -474,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
