--- a/arith7parser.ipynb
+++ b/arith7parser.ipynb
@@ -16,7 +16,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arith_parse import *\n",
+    "url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main'\n",
+    "\n",
+    "import httpimport\n",
+    "with httpimport.remote_repo(url):\n",
+    "  from arith_parse import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', showOperType=False):\n",
     "  # showOption ::= 'polish' | 'RPN' | 'infix_latex' | 'tree'\n",
