--- a/logic_parser.ipynb
+++ b/logic_parser.ipynb
@@ -31,14 +31,15 @@
     "# Version: 2021.05.28\n",
     "# Description: Use line 5-6 in Google Colab if logic_parse.py is not uploaded.\n",
     "\n",
-    "# import httpimport\n",
-    "# with httpimport.remote_repo('https://raw.githubusercontent.com/jhjeong314/Proofmood/main'):\n",
-    "#   from logic_parse import *\n",
+    "url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main'\n",
+    "import httpimport\n",
+    "with httpimport.remote_repo(url):\n",
+    "  from logic_parse import *\n",
     "  \n",
-    "from logic_parse import *\n",
+    "# from logic_parse import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', showOperType=False):\n",
-    "  # showOption ::= 'polish' | 'RPN' | 'infix_latex' | 'tree'\n",
+    "  # showOption ::= 'polish' | 'RPN' | 'infix_latex' | 'tree' | 'bussproof'\n",
     "  # showOperType has effect only when showOption == 'polish' or 'RPN'\n",
     "  from IPython.display import display, Math\n",
     "\n",
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
